--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.2",
     "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
